# nabla

./: .gitignore  AI_CONTEXT.md  Cargo.toml  LICENSE  README.md
.github/workflows/: tauri-build.yml
config/: nichikagon_config.json  nichikagon_config.toml
nabla-cli/: Cargo.toml
nabla-cli/config/: config_example.toml
nabla-cli/src/: main.rs
nabla-core/: Cargo.toml
nabla-core/src/: aerodynamic.rs  engine.rs  lib.rs  parameter.rs  post_process.rs  wind.rs
nabla-lp/: next.config.ts  package.json
nabla-lp/app/: layout.tsx  page.tsx
nabla-server/: Cargo.toml
nabla-server/src/: main.rs
nabla-tauri/: .env.production  package-lock.json  package.json
nabla-tauri/.next/: BUILD_ID  _events_52469.json  build-manifest.json  export-detail.json  fallback-build-manifest.json  prerender-manifest.json  required-server-files.js  required-server-files.json  trace  trace-build
nabla-tauri/.next/cache/: .previewinfo  .rscinfo
nabla-tauri/.next/dev/: build-manifest.json  lock  prerender-manifest.json  trace
nabla-tauri/.next/diagnostics/: route-bundle-stats.json
nabla-tauri/.next/server/: middleware-build-manifest.js  server-reference-manifest.js  server-reference-manifest.json
nabla-tauri/src-tauri/: Cargo.toml  tauri.conf.json
nabla-tauri/src-tauri/capabilities/: default.json
nabla-tauri/src-tauri/icons/: icon.icns
nabla-tauri/src-tauri/src/: lib.rs  lib.rs.patch  main.rs
src/: aerodynamic.rs  atmosphere.rs  dynamics.rs  engine.rs  geometry.rs  launcher.rs  main.rs  parachute.rs  parameter.rs  payload.rs  post_process.rs  solver.rs
(+649 files in other folders)
