[package]
name = "nabla-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["multipart"] }
nabla-core = { version = "0.1.0", path = "../nabla-core" }
nalgebra = "0.34.2"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
tokio = { version = "1.52.1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
zip = "8.6.0"
